Close Cost Quote review gaps (#197)